<resources>
    <string name="app_name">Xорошие книги 4/18</string>
    <string name="app_name_version">Book Zumda</string>

    <string name="share_to">Поделиться с</string>
    <string name="loading">загрузка...</string>
    <string name="home">Приборная панель</string>
    <string name="search">Поиск</string>
    <string name="categories">категории</string>
    <string name="profile">Профиль</string>
    <string name="setting">настройка</string>
    <string name="ps_change_password">Выйти</string>
    <string name="ps_logout">Выйти</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Ok</string>
    <string name="warn">предупреждать</string>

    <!--  Home Search Items    -->
    <string name="search_name">Поиск книги, автор ...</string>

    <!--    Detail Book-->
    <string name="buy_book">купить</string>
    <string name="phone_number">Ваш номер телефона</string>
    <string name="my_phone_number">+(99899) 857-80-86</string>
    <string name="phone_number_helper">В течение 24 часов мы свяжемся с этим номером телефона</string>
    <string name="next">Продолжить</string>
    <string name="invalid_phone">Неправильный номер телефона</string>
    <string name="more_from_this_author">Больше от этого автора</string>
    <string name="more_category">Category</string>
    <string name="simular_boook">Похожие книги</string>
    <string name="location">контакты</string>
    <string name="language">язык</string>
    <string name="contacts_1">Головной офис</string>
    <string name="contacts_filial">филиалы</string>
    <string name="contacts_telefon">Телефоны \n+(99899)8578086</string>
    <string name="contacts_address">Адрес: \t\t Toshkent sh. Chilonzor 20-mavze </string>
    <string name="contacts_email">Электронная почта \nshohruh.maxmudov@mail.ru</string>
    <string name="my_email">shohruh.maxmudov@mail.ru</string>
    <string name="address">Адрес:</string>
    <string name="phone">Телефоны:</string>
    <string name="email">Электронная почта:</string>
    <string name="address_name">Тошкент ш. Чилонзор 20-мавз</string>
    <string name="address_name_2">Тошкент ш. Чилонзор 20-мавз</string>



    <!-- SearchView -->
    <string name="search_anything">Поиск Все, что вы хотите</string>

    <string name="common">Common Common</string>
    <string name="summa">30.000 so`m</string>
    <string name="price">сум</string>
    <string name="favorite">Добавить в избранное</string>
    <string name="detail">подробность</string>
    <string name="name">имя</string>

    <!-- Setting Info-->
    <string name="app_version">версия приложения 1.0.0</string>
    <string name="my_books">Мои книги</string>
    <string name="my_favorites">Мои любимые</string>
    <string name="successfull">успешный</string>
    <string name="info_success">Ваш заказ будет доставлен в течение 2 рабочих дней. Мы скоро с вами свяжемся.</string>
    <string name="info">О приложении</string>
    <string name="error">Sinetgubg webt wring</string>

    <!-- session -->
    <string-array name="splash_title">
        <item> Экономьте свое время</item>
        <item> Больше заказов</item>
        <item> Доставка от двери до двери</item>
    </string-array>

    <string-array name="splash_detail">
        <item>
            Экономьте время - заказывайте за считанные минуты!</item>
        <item>Много груза - неограниченное количество и неограниченные удобства в вашем распоряжении!</item>
        <item>Доставка от двери до двери - воспользуйтесь нашим сервисом и наслаждайтесь!</item>
    </string-array>
</resources>
