<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ToolbarStyle"
        app:title="@string/info"
        app:navigationIcon="@drawable/ic_back"
        android:elevation="5dp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="19sp"
        android:layout_margin="5dp"
        android:padding="5dp"
        style="@style/TextTitle"
        android:textColor="@color/primary_text"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="10dp" />

    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_gravity="end|bottom"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/geo_location" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacts_1"
        android:textSize="14sp"
        style="@style/TextTitle"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textColor="@color/primary_text"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="12sp"
            style="@style/TextTitle"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textColor="@color/primary_text"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/address_name"
            android:textSize="12sp"
            style="@style/TextTitle"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textColor="@color/text_color"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPhone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="12sp"
            style="@style/TextTitle"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textColor="@color/primary_text"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAddress"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="12sp"
            style="@style/TextTitle"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textColor="@color/primary_text"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGrey" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacts_filial"
        android:textSize="14sp"
        style="@style/TextTitle"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textColor="@color/primary_text"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="12sp"
            style="@style/TextTitle"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textColor="@color/primary_text"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/address_name_2"
            android:textSize="12sp"
            style="@style/TextTitle"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textColor="@color/text_color"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp" />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAppVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/grey"
        android:text="@string/app_name_version"
        android:textSize="11sp" />

</LinearLayout>