<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/profile" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:background="@color/background_layout"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgs"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_settings_profile"
                    android:tint="@color/colorAccent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:scaleType="center"
                    android:background="@drawable/circle" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="12dp"
                android:background="@color/lightGrey" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@null"
                    android:tint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_profile" />

                <TextView
                    android:id="@+id/tvFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="54dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp"
                    tools:text="Антон Корнилов" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/lightGrey" />

            <FrameLayout
                android:id="@+id/fmCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@null"
                    android:tint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_smartphone" />

                <TextView
                    android:id="@+id/tvPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="54dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp"
                    tools:text="+99890 978 68 78" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/lightGrey" />

            <FrameLayout
                android:id="@+id/layoutChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@null"
                    android:tint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_show_password" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="54dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/ps_change_password"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/lightGrey" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/lightGrey" />

            <FrameLayout
                android:id="@+id/layoutLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="18dp"
                    android:contentDescription="@null"
                    android:tint="@color/red"
                    app:srcCompat="@drawable/ic_logout" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="54dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/ps_logout"
                    android:textColor="@color/red"
                    android:textSize="18sp" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/lightGrey" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
